# carry-on

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  PLAN-0g-password-complexity.md  README.md  ROADMAP.md  allure-categories.json  deply.yaml  noxfile.py  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  ci.yml.j2  uv-upgrade.yml
api/: README.md  index.py  pin_security.py
docs/: glossary.md  testing.md
docs/adr/: 0001-domain-driven-development.md  0002-test-driven-development.md  0003-solid-principles.md  0004-pytest.md  0005-uv-package-manager.md  0006-owasp-security.md  0007-dependency-versioning.md  0008-feature-specifications.md  0009-password-hashing.md  0010-two-click-navigation.md  0011-specification-acceptance-tests.md  0012-development-workflow.md  0013-ci-workflow-generation.md  README.md
docs/specs/: idea-capture.md  multi-user.md  navigation.md  round-finalize.md  shot-tracking.md  stroke-tracking.md
domain/: __init__.py
domain/entities/: __init__.py  stroke.py
domain/repositories/: __init__.py  stroke_repository.py
domain/value_objects/: __init__.py  club_type.py
infrastructure/: __init__.py
infrastructure/repositories/: __init__.py  mongo_stroke_repository.py
public/: ideas.html  index.html
scripts/: backup.py  generate_ci.py  migrate_user_isolation.py  restore.py
services/: __init__.py  stroke_service.py
src/carry_on/: __init__.py  bootstrap.py  container.py
src/carry_on/api/: __init__.py  courses.py  ideas.py  index.py  password_security.py  pin_security.py  player.py  rounds.py  schema.py  strokes.py
src/carry_on/domain/: exceptions.py
src/carry_on/domain/entities/: __init__.py  idea.py  stroke.py  user.py
src/carry_on/domain/repositories/: __init__.py  idea_repository.py  stroke_repository.py  user_repository.py
src/carry_on/domain/security/: __init__.py  password_hasher.py
src/carry_on/domain/value_objects/: __init__.py
src/carry_on/infrastructure/: mongodb.py
src/carry_on/infrastructure/repositories/: __init__.py  mongo_idea_repository.py  mongo_stroke_repository.py  mongo_user_repository.py
src/carry_on/infrastructure/security/: __init__.py  argon2_password_hasher.py
src/carry_on/services/: __init__.py  authentication_service.py  course_service.py  idea_service.py  player_service.py  round_service.py  stroke_service.py
src/carry_on/static/: __init__.py  index.html
tests/: conftest.py  test_api.py  test_auth_api.py  test_ideas_api.py  test_password_compliance.py  test_password_security.py  test_pin_security.py  test_strokes_di.py
tests/acceptance/: __init__.py  conftest.py  db_utils.py
tests/acceptance/features/auth/: login.feature  password_migration.feature  registration.feature  session.feature
tests/acceptance/features/courses/: add_course.feature
tests/acceptance/features/ideas/: submit.feature
tests/acceptance/features/navigation/: courses.feature  profile.feature  rounds.feature  (+1 more)
tests/acceptance/pages/: __init__.py  course_page.py  ideas_page.py  login_page.py  navigation_page.py  round_page.py  stroke_page.py
tests/acceptance/step_defs/: __init__.py  test_add_course.py  test_courses_navigation.py  test_login.py  test_navigation.py  test_password_migration.py  test_profile.py  test_registration.py  test_session.py  test_strokes.py
tests/domain/: test_club_type.py  test_distance.py  test_stroke.py  test_user.py
tests/fakes/: __init__.py  fake_course_repository.py  fake_player_repository.py  fake_round_repository.py  fake_stroke_repository.py
tests/infrastructure/: test_mongo_idea_repository.py  test_mongo_stroke_repository.py  test_mongo_user_repository.py
tests/services/: test_authentication_service.py  test_idea_service.py  test_stroke_service.py
tests/unit/: conftest.py  test_api.py  test_auth_api.py  test_bootstrap.py  test_courses_api.py  test_generate_ci.py  test_ideas_api.py  test_password_security.py  test_player_api.py  test_rounds_api.py  test_static_resources.py  test_strokes_di.py
tests/unit/domain/: test_club_type.py  test_idea.py  test_stroke.py
tests/unit/infrastructure/: test_mongo_course_repository.py  test_mongo_player_repository.py  test_mongo_round_repository.py  test_mongo_stroke_repository.py
tests/unit/services/: test_course_service.py  test_player_service.py  test_round_service.py  test_stroke_service.py
(+48 files in other folders)
