[project]
name = "carry-on"
version = "0.1.0"
description = "Golf shot tracking web app"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.115.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["api"]
omit = ["**/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
