[project]
name = "carry-on"
version = "0.1.0"
description = "Golf stroke tracking web app"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.115.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.6.2",
    "allure-pytest>=2.15.3",
    "nox>=2025.11.12",
    "nox-uv>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=carry_on --cov-report=term-missing --cov-fail-under=70"
markers = [
    "acceptance: marks tests as acceptance tests (deselect with '-m \"not acceptance\"')",
]

[tool.coverage.run]
source = ["carry_on"]
omit = ["**/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["carry_on*"]
