[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carry-on"
version = "0.1.0"
description = "Golf stroke tracking web app"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.115.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.6.2",
    "allure-pytest>=2.15.3",
    "nox>=2025.11.12",
    "nox-uv>=0.7.0",
    "deply>=0.8.0",
    "pre-commit>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--import-mode=importlib --cov=carry_on --cov-report=term-missing --cov-fail-under=70"
#filterwarnings = [
#    "error::DeprecationWarning",
#    "error::PendingDeprecationWarning"
#]
markers = [
    "acceptance: marks tests as acceptance tests (deselect with '-m \"not acceptance\"')",
]

[tool.coverage.run]
source = ["carry_on"]
omit = ["**/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_subclassing_any = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
ignore_missing_imports = false
warn_unreachable = true
#disallow_any_expr = true

[[tool.mypy.overrides]]
module = "dependency_injector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "carry_on.container"
disallow_any_unimported = false
disallow_subclassing_any = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["carry_on*"]

[tool.setuptools.package-data]
"carry_on.static" = ["*.html"]

[tool.ruff]
lint.select = ["S", "E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106"]  # Ignore assert and hardcoded passwords in tests
"noxfile.py" = ["S105", "S603", "S607"]  # Allow hardcoded passwords and subprocess in build script
"scripts/*.py" = ["S603", "S607"]  # Allow subprocess in scripts
